@@ -4,49 +4,52 @@ import com.sparta.pracspring_blog.dto.MsgResponseDto;
 import com.sparta.pracspring_blog.dto.PostRequestDto;
 import com.sparta.pracspring_blog.dto.PostResponseDto;
 import com.sparta.pracspring_blog.entity.Post;
+import com.sparta.pracspring_blog.entity.User;
 import com.sparta.pracspring_blog.repository.PostRepository;
+import lombok.NoArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.concurrent.RejectedExecutionException;
+import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class PostService {
     private final PostRepository postRepository;
 
-    public PostService(PostRepository postRepository) {
-        this.postRepository = postRepository;
-    }
-
     //(1) 글 생성하기
     @Transactional
-    public PostResponseDto createPost(PostRequestDto postRequestDto) {
-        //RequestDto -> Entity
+    public PostResponseDto createPost(PostRequestDto postRequestDto, User user) {
         Post post = new Post(postRequestDto);
+        post.setUser(user);
 
-        //Entity 를 DB 저장
-        Post savaPost = postRepository.save(post);
+        postRepository.save(post);
 
-        //Entity -> ResponseDto
-        PostResponseDto postResponseDto = new PostResponseDto(post);
-
-        return postResponseDto;
+        return new PostResponseDto(post);
     }
 
     //(2) 전체 글 조회하기
     @Transactional(readOnly = true)
-    public List<PostResponseDto> getPostAll() {
-        return postRepository.findAllByOrderByCreatedAtDesc().stream().map(PostResponseDto::new).toList();
-        //stream(): 병렬/순차 처리에 용이한 요소들의 연속으로 만들어주기 위해 Post 객체들을 스트림으로 변환 
-        //map(PostResponseDto::new): PostResponseDto 의 생성자를 호출하고 각 Post 객체를 파라미터로 전달하여, Post 객체들을 PostResponseDto 객체로 변환 
+    public List<PostResponseDto> getPosts() {
+        List<PostResponseDto> postList = postRepository.findAllByOrderByCreatedAtDesc().stream()
+                .map(PostResponseDto::new)
+                .collect(Collectors.toList());
+        //stream(): 병렬/순차 처리에 용이한 요소들의 연속으로 만들어주기 위해 Post 객체들을 스트림으로 변환
+        //map(PostResponseDto::new): PostResponseDto 의 생성자를 호출하고 각 Post 객체를 파라미터로 전달하여, Post 객체들을 PostResponseDto 객체로 변환
         //toList(): Stream 클래스에서 지원하는 메서드로, PostResponseDto 객체를 List 로 변환
+
+        return postList;
     }
     
     //(3) 선택 글 조회하기
     @Transactional(readOnly = true)
-    public Optional<PostResponseDto> getPostOne(Long id) {
-        return postRepository.findById(id).map(PostResponseDto::new);
+    public PostResponseDto getPostById(Long id) {
+        Post post = findPost(id);
+        return new PostResponseDto(post);
     }
     
     //(4) 선택 글 수정하기
@@ -61,13 +64,14 @@ public class PostService {
     
     //(5) 선택 글 삭제하기
     @Transactional
-    public MsgResponseDto deletePost(Long id) {
-        Post post = findPost(id);
-        postRepository.delete(post); //delete(): entity 를 삭제해주는 메서드
-        return new MsgResponseDto("선택한 게시글 삭제를 성공했습니다.");
+    public void deletePost(Post post, User user) {
+        if (!post.getUser().equals(user)) {
+            throw new RejectedExecutionException();
+        }
+
+        postRepository.delete(post);
     }
-    
-    private Post findPost(Long id) {
+    public Post findPost(Long id) {
         return postRepository.findById(id).orElseThrow(() ->
                 new IllegalArgumentException("선택한 메모는 존재하지 않습니다.")
         );
